// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it renders a Checkbox in error state correctly 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}

<div>
  <div
    class="c0"
  >
    <label
      class="MuiFormControlLabel-root AbstractSwitch-formControlLabel-176"
      data-id="my-checkbox-label"
      id="my-checkbox-label"
    >
      <span
        aria-disabled="false"
        class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-193 MuiCheckbox-root AbstractSwitchBase-error-root-185 AbstractSwitchBase-error-root-186 MuiCheckbox-colorSecondary AbstractSwitch-switchComp-177 MuiIconButton-colorSecondary"
        data-id="my-checkbox-checkbox-base"
      >
        <span
          class="MuiIconButton-label"
        >
          <input
            aria-describedby="my-checkbox-helper-text"
            class="PrivateSwitchBase-input-196"
            data-indeterminate="false"
            id="my-checkbox"
            type="checkbox"
            value=""
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root svg-icon-secondary-small-svg-icon-209"
            data-id="IconCheckBoxOutlineBlankSharp"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 5v14H5V5h14m2-2H3v18h18V3z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </span>
      <span
        class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
      >
        Check 1
      </span>
    </label>
  </div>
</div>
`;

exports[`it renders a disabled Checkbox 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}

<div>
  <div
    class="c0"
  >
    <label
      class="MuiFormControlLabel-root AbstractSwitch-formControlLabel-259 Mui-disabled"
      data-id="my-checkbox-label"
      id="my-checkbox-label"
    >
      <span
        aria-disabled="true"
        class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-276 MuiCheckbox-root AbstractSwitchBase-root-268 AbstractSwitchBase-root-269 MuiCheckbox-colorSecondary AbstractSwitch-switchComp-260 PrivateSwitchBase-disabled-278 Mui-disabled MuiIconButton-colorSecondary Mui-disabled Mui-disabled"
        data-id="my-checkbox-checkbox-base"
        tabindex="-1"
      >
        <span
          class="MuiIconButton-label"
        >
          <input
            aria-describedby="my-checkbox-helper-text"
            class="PrivateSwitchBase-input-279"
            data-indeterminate="false"
            disabled=""
            id="my-checkbox"
            type="checkbox"
            value=""
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root svg-icon-secondary-small-svg-icon-292"
            data-id="IconCheckBoxOutlineBlankSharp"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 5v14H5V5h14m2-2H3v18h18V3z"
            />
          </svg>
        </span>
      </span>
      <span
        class="MuiTypography-root MuiFormControlLabel-label Mui-disabled MuiTypography-body1"
      >
        Check 1
      </span>
    </label>
  </div>
</div>
`;

exports[`it renders an unchecked Checkbox with label and helperText 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}

<div>
  <div
    class="c0"
  >
    <label
      class="MuiFormControlLabel-root AbstractSwitch-formControlLabel-1"
      data-id="my-checkbox-label"
      id="my-checkbox-label"
    >
      <span
        aria-disabled="false"
        class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-18 MuiCheckbox-root AbstractSwitchBase-root-10 AbstractSwitchBase-root-11 MuiCheckbox-colorSecondary AbstractSwitch-switchComp-2 MuiIconButton-colorSecondary"
        data-id="my-checkbox-checkbox-base"
      >
        <span
          class="MuiIconButton-label"
        >
          <input
            aria-describedby="my-checkbox-helper-text"
            class="PrivateSwitchBase-input-21"
            data-indeterminate="false"
            id="my-checkbox"
            type="checkbox"
            value=""
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root svg-icon-secondary-small-svg-icon-34"
            data-id="IconCheckBoxOutlineBlankSharp"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 5v14H5V5h14m2-2H3v18h18V3z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </span>
      <span
        class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
      >
        Check 1
      </span>
    </label>
    <p
      class="MuiFormHelperText-root AbstractSwitch-formHelperText-3 form-helper-text-grey400-colour-74"
      data-id="my-checkbox-helper-text"
      id="my-checkbox-helper-text"
    >
      This is more info
    </p>
  </div>
</div>
`;
